--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,9 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: /cs131_notes_dev # the subpath of your site, e.g. /blog
 
 ########### ONLY CHANGE THESE FIELDS
+email: shunyaox@stanford.edu
 # replace with your own email for build notifications or leave it blank
-url: "https://anarcomey.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://shunyaoxu.github.io/cs131_notes_dev/" # the base hostname & protocol for your site, e.g. http://example.com
 ###########
 
 # Theme-specific
